# tpos-homework-2

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: data.csv
src/filler/: Dockerfile  requirements.txt
src/filter/: Dockerfile  filter.py
src/filter/data/: data.csv
src/web/: Dockerfile  requirements.txt  web.py
